# AR

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/assets/models/: dance4life_coach_v1.onnx
apps/android/app/src/main/java/com/dance4life/app/: MainActivity.kt
apps/android/app/src/main/res/values/: strings.xml
docs/: architecture.md
libs/core-data/: build.gradle.kts
libs/core-domain/: build.gradle.kts
libs/core-domain/src/main/java/com/dance4life/core/domain/model/: MovementRecommendation.kt
ml/export/: dance4life_coach_v1.onnx.data  export_onnx.py
ml/training/: README.md  pyproject.toml
ml/training/config/: training_config.yaml
ml/training/src/: evaluate.py  train.py
plugins/rl-inference/: build.gradle.kts  consumer-rules.pro
plugins/rl-inference/src/main/java/com/dance4life/plugins/rlinference/: OnnxRlCoachPolicy.kt  RlCoachPolicy.kt  RlCoachPolicyFactory.kt  StubRlCoachPolicy.kt
scripts/: bootstrap.sh  start_emulator.sh
